los cambios necesarios para que la pagina de prestamos por zona funcione