@@ -105,14 +105,6 @@
                 <configuration>
                     <executable>java</executable>
                     <arguments>
-                        <argument>--add-opens</argument>
-                        <argument>java.base/jdk.internal.misc=ALL-UNNAMED</argument>
-                        <argument>--add-opens</argument>
-                        <argument>java.base/java.lang=ALL-UNNAMED</argument>
-                        <argument>--add-opens</argument>
-                        <argument>java.base/java.util=ALL-UNNAMED</argument>
-                        <argument>--add-opens</argument>
-                        <argument>java.base/java.nio=ALL-UNNAMED</argument>
                         <argument>-classpath</argument>
                         <classpath/>
                         <argument>presentacion.Principal</argument>
